--- a/terra-rawhide-i386.cfg
+++ b/terra-rawhide-i386.cfg
@@ -2,4 +2,4 @@ config_opts['releasever'] = 'rawhide'
 config_opts['target_arch'] = 'i686'
 config_opts['legal_host_arches'] = ('i386', 'i586', 'i686', 'x86_64')
 
-include('templates/terra.tpl')
+include('templates/terra-rawhide.tpl')
