--- a/terra-rawhide-x86_64.cfg
+++ b/terra-rawhide-x86_64.cfg
@@ -2,4 +2,4 @@ config_opts['releasever'] = 'rawhide'
 config_opts['target_arch'] = 'x86_64'
 config_opts['legal_host_arches'] = ('x86_64',)
 
-include('templates/terra.tpl')
+include('templates/terra-rawhide.tpl')
