--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        releasever: [rawhide, 43]
     container:
-      image: ghcr.io/terrapkg/builder:frawhide
+      image: ghcr.io/terrapkg/builder:f${{ releasever }}
       options: --cap-add=SYS_ADMIN --privileged
     steps:
       - name: Checkout Terra repository
@@ -30,10 +33,10 @@ jobs:
         run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
       - name: Include custom build template instead of package default
-        run: cp -v mock-configs/terra.tpl /etc/mock/templates/terra.tpl
+        run: cp -v mock-configs/terra*.tpl /etc/mock/templates/
 
       - name: Build with Andaman
-        run: anda build terra/mock-configs -c mock-configs/terra-rawhide-x86_64.cfg
+        run: anda build terra/mock-configs -c mock-configs/terra-${{ releasever }}-x86_64.cfg
 
       - name: Generating artifact name
         id: art
@@ -44,7 +47,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: mock-configs-frawhide
+          name: mock-configs-f${{ releasever }}
           compression-level: 0 # The RPMs are already compressed :p
           path: |
             anda-build/rpm/rpms/*
