--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         releasever: [rawhide, 43]
     container:
-      image: ghcr.io/terrapkg/builder:f${{ releasever }}
+      image: ghcr.io/terrapkg/builder:f${{ matrix.releasever }}
       options: --cap-add=SYS_ADMIN --privileged
     steps:
       - name: Checkout Terra repository
@@ -36,7 +36,7 @@ jobs:
         run: cp -v mock-configs/terra*.tpl /etc/mock/templates/
 
       - name: Build with Andaman
-        run: anda build terra/mock-configs -c mock-configs/terra-${{ releasever }}-x86_64.cfg
+        run: anda build terra/mock-configs -c mock-configs/terra-${{ matrix.releasever }}-x86_64.cfg
 
       - name: Generating artifact name
         id: art
@@ -47,7 +47,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: mock-configs-f${{ releasever }}
+          name: mock-configs-f${{ matrix.releasever }}
           compression-level: 0 # The RPMs are already compressed :p
           path: |
             anda-build/rpm/rpms/*
